-
Bug
-
Resolution: Done
-
P2: Important
-
5.4.0
-
None
-
Ubuntu 14.04 LTS
Android 4.4.4 on a Galaxy Tab 3 10.1
Android 4.4.4 on a galaxy Tab 4 10.1
Android 5.0 on a MotoG (2013 - first edition)
Running QDesktopServices::openUrl in Android OS (>4.4) always failed with android.content.ActivityNotFoundException.
If I try to load a PDF file with this function, I’ll expect the system to show a popup window where I can choose an application with which to open the file.
- replaces
-
QTBUG-47979 QDesktopServices is unable to open a file on Android
-
- Closed
-
| For Gerrit Dashboard: QTBUG-45585 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 122743,4 | Android: auto-detect MIME type for local files to make openUrl work | 5.5 | qt/qtbase | Status: MERGED | +2 | 0 |